Update the readme file for project

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
 body {
   padding: 70px;
 }
+
+.bg-dark {
+  background-image: url(../images/tennis\ background.jpg) ;
+  background-size: cover;
+}
